Remove commented code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidThingsMotion</string>
+    <string name="caught">Ha, got eem</string>
+
 </resources>
